--- a/src/index.html
+++ b/src/index.html
@@ -21,13 +21,13 @@
     <a href="#home" class="skip-link">Skip to content</a> 
     <header class="container-fluid" id="main-header">
         <!--Main navigation-->
-        <nav class="navbar navbar-dark navbar-expand-md container align-center">
-            <a href="#" class="navbar-brand"><span class="text-primary fs-3 text-uppercase fw-bold py'0">Fit</span>ness</a>
+        <nav class="navbar navbar-dark navbar-expand-lg container align-center">
+            <a href="#" class="navbar-brand"><span class="text-primary fs-2 text-uppercase fw-bold py-0">Fit</span>ness</a>
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar" aria-expanded="false">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="navbar-collapse collapse" id="navbar">
-                <ul class="navbar-nav ms-auto fs-5">
+                <ul class="navbar-nav ms-auto fs-4">
                     <li class="nav-item"><a href="#home" class="nav-link active">Home</a></li>
                     <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
                     <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
@@ -43,8 +43,8 @@
     <main>
         <!--Home-->
         <section class="home d-flex jc-c ai-c text-center" id="home" aria-label="Home">
-            <div class="container my-auto">
-                <p class="text-capitalize text-primary fw-bolder fs-5">Get ready for a new season</p>
+            <div class="container my-auto pt-3 pb-5">
+                <p class="text-capitalize text-primary fw-bolder fs-6">Get ready for a new season</p>
                 <h1 class="mt-3 mb-5 fw-bold">Start the change today</h1>
                 <a href="#courses" class="btn btn-lg btn-outline-primary">Get started</a>
             </div>
@@ -79,15 +79,15 @@
                             <p>50+</p>
                             <h3>Online courses</h3>
                         </div>
-                        <div class="box col-sm-6 col-md-3">
+                        <div class="box col-sm-6 col-md-3 mt-3 mt-md-0">
                             <p>150+</p>
                             <h3>Online instructors</h3>
                         </div>
-                        <div class="box col-sm-6 col-md-3">
+                        <div class="box col-sm-6 col-md-3 mt-3 mt-md-0">
                             <p>350+</p>
                             <h3>Fitness equipment</h3>
                         </div>
-                        <div class="box col-sm-6 col-md-3">
+                        <div class="box col-sm-6 col-md-3 mt-3 mt-md-0">
                             <p>500+</p>
                             <h3>Happy customers</h3>
                         </div>
@@ -113,7 +113,7 @@
                             <li><i class="fas fa-clock"></i>1 hour</li>
                         </ul>
                         <h3 class="card-title">Cardio</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat exercitationem soluta nostrum qui alias quisquam nihil quidem porro veniam sequi!</p>
+                        <p class="my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat exercitationem soluta nostrum qui alias quisquam nihil quidem porro veniam sequi!</p>
                         <a href="#" class="btn btn-lg btn-outline-primary">Read more</a>
                     </div>
                   </article>
@@ -127,7 +127,7 @@
                             <li><i class="fas fa-clock"></i>1 hour</li>
                         </ul>
                         <h3 class="card-title">Weight lifting</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat exercitationem soluta nostrum qui alias quisquam nihil quidem porro veniam sequi!</p>
+                        <p class="my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat exercitationem soluta nostrum qui alias quisquam nihil quidem porro veniam sequi!</p>
                         <a href="#" class="btn btn-lg btn-outline-primary">Read more</a>
                     </div>
                   </article>
@@ -141,7 +141,7 @@
                             <li><i class="fas fa-clock"></i>1 hour</li>
                         </ul>
                         <h3 class="card-title">Individual training</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat exercitationem soluta nostrum qui alias quisquam nihil quidem porro veniam sequi!</p>
+                        <p class="my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat exercitationem soluta nostrum qui alias quisquam nihil quidem porro veniam sequi!</p>
                         <a href="#" class="btn btn-lg btn-outline-primary">Read more</a>
                     </div>
                   </article>
@@ -155,7 +155,7 @@
                             <li><i class="fas fa-clock"></i>1 hour</li>
                         </ul>
                           <h3 class="card-title">Yoga</h3>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat exercitationem soluta nostrum qui alias quisquam nihil quidem porro veniam sequi!</p>
+                          <p class="my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat exercitationem soluta nostrum qui alias quisquam nihil quidem porro veniam sequi!</p>
                           <a href="#" class="btn btn-lg btn-outline-primary">Read more</a>
                       </div>
                     </article>
@@ -169,7 +169,7 @@
                             <li><i class="fas fa-clock"></i>1 hour</li>
                         </ul>
                           <h3 class="card-title">Pilates</h3>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat exercitationem soluta nostrum qui alias quisquam nihil quidem porro veniam sequi!</p>
+                          <p class="my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat exercitationem soluta nostrum qui alias quisquam nihil quidem porro veniam sequi!</p>
                           <a href="#" class="btn btn-lg btn-outline-primary">Read more</a>
                       </div>
                     </article>
@@ -183,7 +183,7 @@
                             <li><i class="fas fa-clock"></i>1 hour</li>
                         </ul>
                           <h3 class="card-title">Kickbox</h3>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat exercitationem soluta nostrum qui alias quisquam nihil quidem porro veniam sequi!</p>
+                          <p class="my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat exercitationem soluta nostrum qui alias quisquam nihil quidem porro veniam sequi!</p>
                           <a href="#" class="btn btn-lg btn-outline-primary">Read more</a>
                       </div>
                     </article>
@@ -202,7 +202,7 @@
                         <article class="card-dark h-100 text-center">
                             <div class="card-header">
                                 <h3 class="py-4">Basic</h3>
-                                <p class="display-5 my-3 fw-bold"><sup>$</sup>35<span>/mo</span></p>
+                                <p class="display-5 mt-5 fw-bold"><sup>$</sup>35<span>/mo</span></p>
                             </div>
                             <div class="card-body">
                                 <ul class="ps-0 my-3">
@@ -221,7 +221,7 @@
                         <article class="card-dark h-100 text-center">
                             <div class="card-header">
                                 <h3 class="py-4">Standard</h3>
-                                <p class="display-5 my-3 fw-bold"><sup>$</sup>65<span>/mo</span></p>
+                                <p class="display-5 mt-5 fw-bold"><sup>$</sup>65<span>/mo</span></p>
                             </div>
                             <div class="card-body">
                                 <ul class="ps-0 my-3">
@@ -239,7 +239,7 @@
                         <article class="card-dark h-100 text-center">
                             <div class="card-header">
                                 <h3 class="py-4">Premium</h3>
-                                <p class="display-5 my-3 fw-bold"><sup>$</sup>100<span>/mo</span></p>
+                                <p class="display-5 mt-5 fw-bold"><sup>$</sup>100<span>/mo</span></p>
                             </div>
                             <div class="card-body">
                                 <ul class="ps-0 my-3">
@@ -401,8 +401,8 @@
                         <div class="col-12">
                             <textarea name="message" id="message" cols="30" rows="10" placeholder="Your message here" class="w-100"></textarea>
                         </div>
-                        <div class="col-12">
-                            <button type="submit" class="btn btn-lg btn-primary">Send</button>
+                        <div class="col-12 d-flex">
+                            <button type="submit" class="btn btn-lg btn-outline-primary mx-auto px-5">Send</button>
                         </div>
                     </form>
                 </div>
